--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <meta name="keywords" content="oto kurtarma, çekici, oto çekici, kurtarıcı, kayseri oto kurtarma, sivas oto kurtarma, sivas çekici" />
-        <title>Kayseri Sivas Oto Kurtarıcı | Oto Çekici | Arslankoç Oto Kurtarma</title>
+        <title>Kayseri - Sivas Oto Kurtarıcı & Taşıyıcı | Forklift | Yol Yardım | Arslankoç Oto Kurtarma</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
