--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kayseri - Sivas Oto Kurtarıcı & Taşıyıcı | Forklift | Yol Yardım | Arslankoç Oto Kurtarma</title>
-  <meta content="" name="description" >
-  <meta content="" name="keywords" content="oto kurtarma, çekici, oto çekici, kurtarıcı, kayseri oto kurtarma, sivas oto kurtarma, sivas çekici">
+  <title>Kayseri Oto Kurtarıcı & Taşıyıcı | Forklift | Yol Yardım | Kayseri Oto Kurtarma</title>
+  <meta name="description" content="Kayseri ilinde hizmet veren profesyonel oto kurtarma firması. Kayseri oto kurtarıcı.">
+  <meta name="keywords" content="oto kurtarma, çekici, oto çekici, kurtarıcı, kayseri oto kurtarma, sivas oto kurtarma, sivas çekici">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
