--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kayseri Oto Kurtarıcı & Taşıyıcı | Forklift | Yol Yardım | Kayseri Oto Kurtarma</title>
+  <title>Kayseri Oto Kurtarıcı & Taşıyıcı | Forklift Kiralama | Yol Yardım Çekici </title>
   <meta name="description" content="Kayseri ilinde hizmet veren profesyonel oto kurtarma firması. Kayseri oto kurtarıcı.">
   <meta name="keywords" content="oto kurtarma, çekici, oto çekici, kurtarıcı, kayseri oto kurtarma, sivas oto kurtarma, sivas çekici">
 
